# minigrep

./: .gitignore  Cargo.toml  README.md  poem.txt
src/: lib.rs  main.rs
tests/: integration_test.rs
