[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
authors = ["photowey"]
description = "A simple rust cmd program, for find a keyword in the given file, and print."
license = "Apache-2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
# default 0
opt-level = 1

[profile.release]
opt-level = 3